--- a/apps/flight-app/src/app/sidebar/sidebar.component.html
+++ b/apps/flight-app/src/app/sidebar/sidebar.component.html
@@ -29,6 +29,13 @@
       </a>
     </li>
 
+    <li>
+      <a routerLink="flight-lookahead">
+        <i class="ti-user"></i>
+        <p>Lookahead</p>
+      </a>
+    </li>
+
     <!--
         <li routerLinkActive="active">
         <a>
