--- a/apps/flight-app/src/app/flight-lookahead/flight-lookahead.component.html
+++ b/apps/flight-app/src/app/flight-lookahead/flight-lookahead.component.html
@@ -9,6 +9,8 @@
       <input [formControl]="control" class="form-control" />
     </div>
 
+    <div [ngStyle]="{backgroundColor: online ? 'green' : 'red'}">Online: {{online}}</div>
+
     <div *ngIf="loading">Loading ...</div>
   </div>
 
