--- a/apps/flight-app/src/app/flight-lookahead/flight-lookahead.component.html
+++ b/apps/flight-app/src/app/flight-lookahead/flight-lookahead.component.html
@@ -9,7 +9,30 @@
       <input [formControl]="control" class="form-control" />
     </div>
 
-    <div [ngStyle]="{backgroundColor: online ? 'green' : 'red'}">Online: {{online}}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
+    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
 
     <div *ngIf="loading">Loading ...</div>
   </div>
