--- a/apps/flight-app/src/app/flight-lookahead/flight-lookahead.component.html
+++ b/apps/flight-app/src/app/flight-lookahead/flight-lookahead.component.html
@@ -10,31 +10,8 @@
     </div>
 
     <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
-    <div [ngStyle]="{backgroundColor: (online$ | async) ? 'green' : 'red'}">Online: {{ (online$ | async) }}</div>
 
-    <div *ngIf="loading">Loading ...</div>
+    <div *ngIf="loading$ | async">Loading ...</div>
   </div>
 
   <table class="table table-striped">
