--- a/apps/flight-app/src/app/flight-booking/flight-card/flight-card.component.html
+++ b/apps/flight-app/src/app/flight-booking/flight-card/flight-card.component.html
@@ -24,6 +24,12 @@
       >
         Edit
       </a>
+
+      <br>
+      Random number: {{ someProperty | number }}
     </p>
   </div>
 </div>
+
+
+{{ blink() }}
