--- a/apps/flight-app/src/app/app.component.html
+++ b/apps/flight-app/src/app/app.component.html
@@ -1,3 +1,5 @@
+{{ auth.userName$ | async }}
+
 <div class="wrapper">
   <div class="sidebar" data-background-color="white" data-active-color="danger">
     <sidebar-cmp></sidebar-cmp>
