--- a/apps/flight-app/src/app/sidebar/sidebar.component.html
+++ b/apps/flight-app/src/app/sidebar/sidebar.component.html
@@ -30,6 +30,13 @@
     </li>
 
     <li routerLinkActive="active">
+      <a routerLink="react">
+        <i class="ti-user"></i>
+        <p>MF React</p>
+      </a>
+    </li>
+
+    <li routerLinkActive="active">
       <a [routerLink]="[{ outlets: { aux: 'basket' } }]">
         <i class="ti-shopping-cart"></i>
         <p>Basket</p>
