--- a/apps/flight-app/src/app/sidebar/sidebar.component.html
+++ b/apps/flight-app/src/app/sidebar/sidebar.component.html
@@ -23,6 +23,20 @@
     </li>
 
     <li routerLinkActive="active">
+      <a routerLink="passenger-mf">
+        <i class="ti-shopping-cart"></i>
+        <p>Passenger MF</p>
+      </a>
+    </li>
+
+    <li routerLinkActive="active">
+      <a routerLink="react">
+        <i class="ti-shopping-cart"></i>
+        <p>React MF</p>
+      </a>
+    </li>
+
+    <li routerLinkActive="active">
       <a [routerLink]="[{ outlets: { aux: 'basket' } }]">
         <i class="ti-shopping-cart"></i>
         <p>Basket</p>
