--- a/apps/flight-app/src/app/sidebar/sidebar.component.html
+++ b/apps/flight-app/src/app/sidebar/sidebar.component.html
@@ -22,6 +22,13 @@
       </a>
     </li>
 
+    <li>
+      <a routerLink="flight-lookahead">
+        <i class="ti-user"></i>
+        <p>Lookahead</p>
+      </a>
+    </li>
+
     <li routerLinkActive="active">
       <a [routerLink]="[{ outlets: { aux: 'basket' } }]">
         <i class="ti-shopping-cart"></i>
