--- a/apps/flight-app/src/app/sidebar/sidebar.component.html
+++ b/apps/flight-app/src/app/sidebar/sidebar.component.html
@@ -23,6 +23,13 @@
     </li>
 
     <li routerLinkActive="active">
+      <a routerLink="flight-lookahead">
+        <i class="ti-arrow-top-right"></i>
+        <p>Lookahead</p>
+      </a>
+    </li>
+
+    <li routerLinkActive="active">
       <a [routerLink]="[{ outlets: { aux: 'basket' } }]">
         <i class="ti-shopping-cart"></i>
         <p>Basket</p>
